# lantern-party

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
backend/: __init__.py  main.py  party_manager.py
backend/games/: __init__.py  base.py
backend/games/bluff/: __init__.py  game.py  prompts.py
backend/games/bluff/data/: prompts.json
backend/games/fib/: __init__.py  game.py  prompts.py
backend/games/lampoon/: __init__.py  game.py  prompts.py
backend/routers/: __init__.py  ws.py
frontend/: fib_host.html  fib_player.html  host.html  index.html  player.html
frontend/bluff/: host.css  host.html  host.js  player.css  player.html  player.js
frontend/lampoon/: host.html  player.html
tests/: conftest.py  test_bluff.py  test_core.py  test_fib.py  test_lampoon.py
