[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lantern-party"
version = "0.1.0"
description = "Open Source, phone-controlled browser party games for couch-friendly chaos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
lantern-party = "backend.main:app"

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "hypothesis>=6.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-semantic-release>=10.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
build_command = "uv build"

[tool.semantic_release.remote]
token = { env = "GH_TOKEN" }
